Fixed a visual bug that made horizontal scrollbars appear when not needed

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -28,6 +28,7 @@ html, body {
   height: 100%;
 }
 
+// TODO: add 0 margin
 .ccss-flex-container-col .ccss-flex-header {
   @include _flex(0, 1);
   border-bottom: 1px solid $colour-base;
@@ -164,7 +165,6 @@ hr.ccss-break.small {
 
 [class*=h-] {
   float: left;
-  overflow-x: scroll;
 }
 
 .h-100 {
